provide logic to save product, place order and receive notification about placed order